Issue #3468621: Color contrast of Views "hidden" fields

--- a/styles/theme/variables.scss
+++ b/styles/theme/variables.scss
@@ -8,7 +8,7 @@
   --gin-color-focus-border: rgba(0, 0, 0, .2); //rgb(0, 125, 250);
   --gin-color-focus-neutral-rgb: rgba(0, 0, 0, .4);
 
-  --gin-color-disabled: #8d8d8d;
+  --gin-color-disabled: #767676;
   --gin-color-disabled-bg: #eaeaea;
   --gin-color-disabled-border: #c2c2c2;
 
@@ -239,7 +239,7 @@
   --gin-color-focus-neutral-rgb: rgba(255, 255, 255, .8);
 
   // Disabled
-  --gin-color-disabled: #767676;
+  --gin-color-disabled: #919191;
   --gin-color-disabled-border: #646464;
   --gin-color-disabled-bg: #47474c;
 
